--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.ant-radio-inner::after {
+  position: absolute !important;
+  top: 7px !important;
+  left: 7px !important; 
+  width: 10px !important;
+  height: 10px !important;
+  background-color: #141315 !important; 
+}
+
+.ant-radio-inner {
+  position: initial !important;  
+  width: 24px !important;
+  align-content: center;
+  justify-content: center;
+  height: 24px !important; 
+}
